--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,12 @@ events {
 }
 
 http {
+
+    # WebSocket upgrade support
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
