--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - n8n_network
 
   n8n:
-    image: n8nio/n8n:latest
+    image: n8nio/n8n:1.106.3
     container_name: n8n
     restart: unless-stopped
     environment:
